整理了部分代码

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,21 +1,28 @@
-log4j.rootLogger=WARN,error-log,console-log
-log4j.logger.com.cpthack=DEBUG,debug-log
+#log4j.rootLogger=WARN,error-log,console-log
+#log4j.logger.com.cpthack=DEBUG,debug-log
+#
+#
+#log4j.appender.error-log=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.error-log.File=logs/all_error.log
+#log4j.appender.error-log.Threshold=ERROR
+#log4j.appender.error-log.layout=org.apache.log4j.PatternLayout
+#log4j.appender.error-log.layout.ConversionPattern=[%5p %t %d{yyyy-MM-dd HH:mm:ss,SSS} --%r(ms)]%n[%l]%n %m %n%n
+#log4j.appender.error-log.DatePattern=yyyy-MM-dd'.log'
+#
+#log4j.appender.console-log=org.apache.log4j.ConsoleAppender
+#log4j.appender.console-log.layout=org.apache.log4j.PatternLayout
+#log4j.appender.console-log.layout.ConversionPattern=[%5p %t %d{yyyy-MM-dd HH:mm:ss,SSS} --%r(ms)]%n[%l]%n %m %n%n
+#
+#log4j.appender.debug-log=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.debug-log.File=logs/jiuwei_debug.log
+#log4j.appender.debug-log.Threshold=DEBUG
+#log4j.appender.debug-log.layout=org.apache.log4j.PatternLayout
+#log4j.appender.debug-log.layout.ConversionPattern=[%5p %t %d{yyyy-MM-dd HH:mm:ss,SSS} --%r(ms)]%n[%l]%n %m %n%n
+#log4j.appender.debug-log.DatePattern=yyyy-MM-dd'.log'
 
-
-log4j.appender.error-log=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.error-log.File=logs/all_error.log
-log4j.appender.error-log.Threshold=ERROR
-log4j.appender.error-log.layout=org.apache.log4j.PatternLayout
-log4j.appender.error-log.layout.ConversionPattern=[%5p %t %d{yyyy-MM-dd HH:mm:ss,SSS} --%r(ms)]%n[%l]%n %m %n%n
-log4j.appender.error-log.DatePattern=yyyy-MM-dd'.log'
-
-log4j.appender.console-log=org.apache.log4j.ConsoleAppender 
-log4j.appender.console-log.layout=org.apache.log4j.PatternLayout
-log4j.appender.console-log.layout.ConversionPattern=[%5p %t %d{yyyy-MM-dd HH:mm:ss,SSS} --%r(ms)]%n[%l]%n %m %n%n
-
-log4j.appender.debug-log=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.debug-log.File=logs/jiuwei_debug.log
-log4j.appender.debug-log.Threshold=DEBUG
-log4j.appender.debug-log.layout=org.apache.log4j.PatternLayout
-log4j.appender.debug-log.layout.ConversionPattern=[%5p %t %d{yyyy-MM-dd HH:mm:ss,SSS} --%r(ms)]%n[%l]%n %m %n%n
-log4j.appender.debug-log.DatePattern=yyyy-MM-dd'.log'
+# Global logging configuration\uff0c\u5efa\u8bae\u5f00\u53d1\u73af\u5883\u4e2d\u8981\u7528debug
+log4j.rootLogger=DEBUG, stdout
+# Console output...
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
